src/app/pages/player/toc-epoc/toc-epoc.page.scss
@for $i from 1 through 5 {
  .level-#{$i} {
    padding-left: ($i - 1) * 20px;
  }
}

.level-1 {
  font-weight: bold;
}

ion-slides {
  padding: 0 1em 1em 1em;

  ion-card {
    flex-grow: 1;
    margin: 0;
  }

  ion-slide {
    flex-direction: column;
    height: auto;
  }
}

ion-col {
  margin-bottom: 15px;
}

// Table des matières non détaillée

.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  .head {
    display: flex;
    flex-direction: row;
    width: 100%;
    margin-top: 1em;
    align-items: flex-end;

    img {
      border-radius: 50%;
      height: 70px;
      width: 70px;
      border: 1px solid black;
      margin-left: calc(10% - 35px + 0.5em);
      margin-right: 5%;
    }

    .titleEpoc {
      width: 80%;
      flex: 1;
      display: flex;
      align-items: center;
      text-align: center;
      background-color: #89ccca;
      clip-path: polygon(0% 0%, 100% 5%, 100% 95%, 0% 100%);
      color: white;
      min-height: 80px;
      max-height: 130px;
      font-size: 1.5em;
    }
  }
}

.tocContent {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.bar {
  margin-left: 10%;
  width: 0.5em;
  height: 100%;
  background-color: var(--ion-color-inria-chapter-uncompleted);
}

.chapters {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  flex: 1;

  .part {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 10px;

    ion-progress-bar {
      width: 10%;
    }

    ion-icon {
      margin: auto;
      width: 5%;
      padding-right: 5%;
    }

    .rectangle {
      width: 90%;
      height: 100%;
      color: #384257;
      background-color: #E6F4F4;
      padding: 0.4em;
      clip-path: polygon(0% 0%, 100% 5%, 100% 95%, 0% 100%);
      display: flex;
      align-items: center;
      min-height: 60px;
      max-height: 110px;
      font-size: 1em;
    }
  }
}

.chapter-completed {
  color: var(--ion-color-inria-chapter-completed);
}

.chapter-uncompleted {
  color: var(--ion-color-inria-chapter-uncompleted);
}

